--- a/ZAD4_4.html
+++ b/ZAD4_4.html
@@ -14,8 +14,9 @@ Maja<br>
 <a href= "file:///C:/Users/huber/Desktop/Maja/informatyka/index.html"> ZAD 4_3</a>
 <br>
 <a href= "file:///C:/Users/huber/Desktop/Maja/informatyka/obliczenia1.html"> ZAD 6_1</a>
-
+<a href= "file:///C:/Users/huber/Desktop/Maja/informatyka/ZAD4_4.html"> xsf</a>
  
  
 </body>
+
 </html>
