--- a/index.html
+++ b/index.html
@@ -2,6 +2,21 @@
 <html>
 <head>
 <body>
+   <head>
+<meta charset="utf-8">
+<meta name="description" content="Tu wpisz opis zawartości strony">
+<title>Lekcja 1 - WWW</title>
+</head>
+<body>
+Maja<br>
+<a href="file:///C:/Users/huber/Desktop/Maja/informatyka/zad4_1.html">ZAD 4_1</a>
+<br>
+<a href="file:///C:/Users/huber/Desktop/Maja/informatyka/zad4_2.html">ZAD 4_2</a>
+<br>
+<a href= "file:///C:/Users/huber/Desktop/Maja/informatyka/index.html"> ZAD 4_3</a>
+<br>
+<a href= "file:///C:/Users/huber/Desktop/Maja/informatyka/obliczenia1.html"> ZAD 6_1</a>
+
 <img src="zdjecie.png" alt="Zrzut ekranu programu" style="width:50%; float:left; margin:0|20px 20px 0;">
 <video width="800" height="400" controls>
    <source src= "htmlfilm.mp4" type= "video/mp4">
@@ -12,7 +27,7 @@
   </audio><br>
   Materiały pomocnicze<br>
   <p><cite> <a href= "https://www.kurshtml.edu.pl/"> Kurs html</a></cite></p>
-  
 
 </body>
+
 </html>
